complete core, to be deployed

--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,12 @@
             </div>
             <div class="tile-container">
             </div>
+            <div class="game-over">
+                <div class="game-over-modal">
+                    <p class="game-over-title">Game over!</p>
+                    <a role='button' class="try-again">Try again</a>
+                </div>
+            </div>
         </div>
         <div class="note">
             <p>目标合成2048，PC用键盘箭头上下左右，手机用手指向四个方向划，就可以移动方块了</p>
